...
) {
    SUGGESTIONS(
        R.string.settings_personal_suggestions_reset_title,
        R.string.settings_personal_suggestions_reset_body,
        R.string.settings_personal_suggestions_reset_confirm,
    ),
    CLIPBOARD(
        R.string.settings_clipboard_clear_dialog_title,
        R.string.settings_clipboard_clear_dialog_body,
        R.string.settings_clipboard_clear,
    ),
}

...
